Atualizar o main.html

--- a/SplitTheString/main.html
+++ b/SplitTheString/main.html
@@ -20,7 +20,7 @@
     <h2>
         Projeto Split
     </h2>
-    <p>Olá, seja bem vindo. Insira uma combinação qualquer de números e palavras, separados por uma vírgula
+    <p>Olá, seja bem vindo. Insira uma combinação qualquer de números e palavras, separados por vírgula
     </p>
     <form id="formulario">
         <label for="nome">Digite sua sequência:</label>
