Atualizar o main.html

--- a/Crachá/main.html
+++ b/Crachá/main.html
@@ -20,7 +20,7 @@
     <h2>
         Projeto Crachá
     </h2>
-    <p>Olá, seja bem vindo. Insira seu nume completo abaixo, e no campo debaixo seu crachá será gerado automaticamente!
+    <p>Olá, seja bem vindo. Insira seu nome completo abaixo, e no campo debaixo seu crachá será gerado automaticamente!
     </p>
     <form id="formulario">
         <label for="nome">Digite seu nome:</label>
